<resources>
    <string name="app_name">iHelp</string>
    <string name="clickme">Click Me</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_registered">Registered</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_password_reset">PasswordReset</string>
    <string name="title_activity_change_password">ChangePassword</string>
    <string name="welcome_msg">Welcome to iHelp</string>
    <string name="email_hint">Email</string>
    <string name="login">Login</string>
    <string name="Email">E-mail</string>
    <string name="register">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgotpwd">Forgot Password?</string>
    <string name="title_activity_login">Sign in</string>
    <string name="gender">Gender</string>
    <string name="iam">I am...</string>
    <string name="enter_email">Enter your email ID</string>
    <string name="enter_reg">Enter your college reg. ID</string>
    <string name="create_pass">Create a password</string>
    <string name="policy_accept">By creating an account you agree to our <b>terms and conditions and privacy policy</b>. </string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="fname">First</string>
    <string name="lname">Last</string>
    <string name="username">NITC Id</string>
    <string name="shareExperience">Share Your Experience</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">Home</string>
    <string-array name="home_nav_drawer_items">
        <item>Profile</item>
        <item>Search</item>
        <item>Interests</item>
        <item>Settings</item>
        <item>Logout</item>
    </string-array>
    <string name="thank">Thanks</string>
    <string name="reward">Reward</string>
    <string name="hello_long">Tere hi liye tujhse hu juda jannaten kahan bin hue fanahhh !!! Ohh ho hoooo ho ho !!!</string>
    <string name="title_activity_ahr">AHR</string>
    <string name="helpie_pic">Helpie\'s Pic</string>
    <string name="branch">B-Tech,CSE</string>
    <string name="accept">Accept</string>
    <string name="help_request">A help request title will go here A help request title will go here
        A help request title will go here A help request title will go here
        A help request title will go here A help request title will go here!!!
    </string>
    <string name="refresh">Refresh</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string-array name="nav_drawer_items">
        <item>Academic</item>
        <item>Technical</item>
        <item>Emergency</item>
        <item>Examination</item>
        <item>Stationary</item>
        <item>Finance</item>
        <item>Medical</item>
        <item>Placement</item>
        <item>Sports</item>
        <item>Extra-curricular</item>
        <item>Contacts</item>
        <item>Mess Issues</item>
        <item>Hostel Issues</item>
        <item>Others</item>

    </string-array>
    <string-array name="search_name">
        <item>Sumit</item>
        <item>Sumit</item>
        <item>Sumit</item>
        <item>Sumit</item>
        <item>Sumit</item>
        <item>Sumit</item>
        <item>Sumit</item>
        <item>Sumit</item>
        <item>Sumit</item>

    </string-array>
    <string-array name="branch_stream">
        <item>B-tech,CSE</item>
        <item>M-Tech,Mech</item>
        <item>MCA,CSE</item>
        <item>B-tech,Production</item>
        <item>M-tech,CSE</item>
        <item>PHD,CSE</item>
        <item>B-Tech,Civil</item>
        <item>B-Tech,ECE</item>
        <item>M-tech,EEE</item>
    </string-array>
    <string name="ask_help">Help Me</string>
    <string name="search">Search User</string>
    <string name="department">Branch</string>
    <string name="submit">Submit</string>
    <string name="select_category">Select Category </string>
    <string name="select_tag">Enter Tags  </string>
    <string name="title">TITLE</string>
    <string name="choose_cat">CHOOSE CATEGORY</string>
    <string name="title_hint">What\'s the request about \?</string>
    <string name="description">description</string>
    <string name="des_hint">Please write a short description !</string>
    <string name="choose_tag">TAGS</string>
    <string name="ask_for_help">Ask For Help</string>
    <string name="title_activity_ask__cat">Ask_Cat</string>
    <string name="tag_info">Tags are used to sub categorize your help request. Please provide at least one
        Tag, so that we can process your request properly.
    </string>
    <string name="tag_text1">Tag 1</string>
    <string name="tag_text2">Tag 2</string>
    <string name="tag_text3">Tag 3</string>
    <string name="tag_text4">Tag 4</string>
    <string name="tag_text5">Tag 5</string>
    <string name="tag_hint">Enter a Tag</string>
    <string name="done">Done</string>
    <string name="noti_help_req">Requests</string>
    <string name="noti_count">00</string>
    <string name="noti_help_accept">Accepts</string>
    <string name="noti_help_others">Others</string>
    <string name="pic_name">Name</string>
    <string name="pic_branchStream">B-TECH, ECE</string>
    <string name="category">Category</string>
    <string name="noti_title">A long title may go here, which may occupy a large height, who knows :P At least i do not know</string>
    <string name="noti_view">View</string>
    <string name="noti_skip">Skip</string>
    <string name="acc_view">View Profile</string>
    <string name="acc_info">Name accepted your <u><b>help request</b></u> \!\!\! </string>
    <string name="acc_title">Title: </string>
    <string name="acc_not_now">Not Now</string>
    <string name="acc_contact">Contact</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="profile_name">Mistu Sagar</string>
    <string name="profile_thanks">Thanks </string>
    <string name="profile_thanks_count">532</string>
    <string name="profile_interests">Interests &amp; Skills</string>
    <string name="profile_accepts">Accepts</string>
    <string name="profile_asked">Asked</string>
    <string name="profile_done">Helped</string>
    <string name="profile_shared">Shared</string>
    <string name="ahr_title">Title</string>
    <string name="view">View</string>
    <string name="ahr_hr_text">Help Requests</string>
    <string name="interest_welcome">Choose your interests and skills !</string>
    <string name="branch_name">CSE</string>
    <string name="sports">SPORTS</string>
    <string name="arts">ARTS</string>
    <string name="technical">TECHNICAL</string>
    <string name="others">Others</string>
    <string name="interest_name">Interest Name</string>
    <string-array name="interests_cse">
        <item>Foundation Of Computing</item>
        <item>Logic Design</item>
        <item>Foundation of Programming</item>
        <item>Signals and Systems</item>
        <item>Logic Design Lab</item>
        <item>Programming Lab</item>
        <item>Computer Organization</item>
        <item>Data Structures and Algorithms</item>
        <item>Discrete Structures</item>
        <item>Hardware Lab</item>
        <item>Data Structures Lab</item>
        <item>Theory Of Computation</item>
        <item>DBMS</item>
        <item>Operating Systems</item>
        <item>Software Engineering</item>
        <item>Compiler Design</item>
        <item>Computer Networks</item>
        <item>Environmental Studies</item>
        <item>Economics</item>
        <item>Principles of Management</item>
        <item>Number Theory and Cryptography</item>
        <item>Principles of programming languages </item>
        <item>Computational Intelligence</item>
        <item>Information Theory</item>
        <item>Graph Theory and Combinatorics </item>
        <item>Combinatorial Algorithms</item>
        <item>Topics in Algorithms</item>
        <item>Quantum Computation</item>
        <item>Computational Complexity</item>
        <item>Computational Algebra</item>
        <item>Computer Architecture</item>
        <item>Distributed Computing</item>
        <item>Middleware Technologies</item>
        <item>Computer Security</item>
        <item>Cloud Computing</item>
        <item>Data Mining</item>
        <item>Multi Agent Systems</item>
        <item>Bioinformatics</item>
        <item>Natural Language Processing</item>
        <item>Web Programming</item>
        <item>Image Processing</item>
        <item>Pattern Recognition</item>
        <item>Computer Graphics</item>
        <item>Design and Analysis of Algorithms</item>
        <item>Coding Theory</item>
        <item>Compiler Lab</item>
        <item>Operating System Lab</item>
        <item>Networks Lab</item>
        <item>DBMS Lab</item>

    </string-array>
    <string name="dash">__</string>
    <string name="help_done_final"> Is your help done?</string>
    <string name="no">No</string>
    <string name="helper_details">Helpers Details</string>
    <string name="search_users">Search users having common interests and skills </string>
    <string name="search_hint">Interest or Skill</string>
    <string name="search_result">Showing results for Data Structures and Algorithms</string>
    <string name="search_no_result">Sorry! No results found. </string>
</resources>