<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.nitish.mistuorg.LoginFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <com.google.android.gms.common.SignInButton
            android:id="@+id/email_sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_centerInParent="true"
            android:visibility="visible"
            />

        <EditText
            android:id="@+id/login_email"
            android:background="@drawable/edit_text_login_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="16sp"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:fontFamily="sans-serif-medium"
            />

        <EditText
            android:id="@+id/login_password"
            android:background="@drawable/edit_text_login_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:maxLength="50"
            android:fontFamily="sans-serif-medium"
            />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_sigup_login_new"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/light_font"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="-1"
            android:shadowDy="-1"
            android:shadowRadius="1"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:alpha="0.8"

            />


        <TextView
            android:id="@+id/begin_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/forgotpwd"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/dark_blue"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            />


    </LinearLayout>
</ScrollView>



