<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_margin="8dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/profile_accepts_item_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:paddingTop="2dp"
        android:paddingBottom="3dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/profile_accepts_category_curved"
        android:textColor="@color/googleBackground"
        />
    <RelativeLayout
        android:background="@drawable/profile_accepts_inner_layout_bottom_curved"
        android:layout_below="@+id/profile_accepts_item_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/profile_accepts_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_long"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="5dp"
            android:padding="5dp"
            android:textColor="#000000"
            />

        <TextView
            android:id="@+id/profile_accepts_item_dash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dash"
            android:layout_below="@+id/profile_accepts_item_title"
            android:padding="5dp"
            android:layout_toStartOf="@+id/profile_accepts_item_pic_cardView"
            />

        <android.support.v7.widget.CardView
            android:id="@+id/profile_accepts_item_pic_cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="#ffffff"
            app:cardCornerRadius="2dp"
            app:cardElevation="4dp"
            android:layout_marginBottom="5dp"
            app:cardPreventCornerOverlap="false"
            android:layout_below="@+id/profile_accepts_item_title"
            android:layout_toStartOf="@+id/profile_accepts_item_helpie_name"
            app:contentPadding="0dp">

            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/profile_accepts_item_pic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/profile"
                android:scaleType="centerCrop"
                />

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/profile_accepts_item_helpie_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pic_name"
            android:layout_below="@+id/profile_accepts_item_title"
            android:layout_alignParentEnd="true"
            android:padding="5dp"
            android:layout_marginEnd="5dp"
            android:textColor="@color/colorPrimaryDark"
            />



    </RelativeLayout>



</RelativeLayout>