<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myColor"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.nitish.mistuorg.profile.AskedHelpInfo">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/myGreen"
        app:cardCornerRadius="2dp"
        app:cardElevation="4dp"
        app:cardPreventCornerOverlap="false"
        app:contentPadding="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/asked_help_details_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ahr_title"
                android:paddingTop="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColor="#ffffff"
                />
            <LinearLayout
                android:id="@+id/asked_help_details_title_container"
                android:layout_below="@+id/asked_help_details_info"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/asked_help_details_title"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:text="@string/hello_long"
                    android:layout_marginStart="10dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="18sp"
                    android:textColor="#000000"
                    />
                <ImageView
                    android:id="@+id/asked_help_details_view"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_chevron_right_black_36dp"
                    android:textColor="@color/shiny"
                    android:textSize="16sp"
                    android:textAllCaps="true"
                    android:gravity="end"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center_vertical"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/asked_help_details_done_container"
                android:orientation="horizontal"
                android:layout_below="@+id/asked_help_details_title_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/asked_help_details_done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_done_final"
                    android:padding="5dp"
                    android:textColor="@color/shiny"
                    />

                <TextView
                    android:id="@+id/asked_help_details_done_response"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:padding="5dp"
                    android:textColor="@color/shiny"
                    />
                <CheckBox
                    android:id="@+id/asked_help_details_checkBox"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:checked="false" />

            </LinearLayout>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/asked_help_details_helpers_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/helper_details"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/myColor"
        android:textColor="@color/dark_blue"
        />

    <ListView
        android:id="@+id/asked_help_details_helpers_list"
        android:background="@color/myColor"
        android:layout_width="match_parent"
        android:dividerHeight="2dp"
        android:divider="@color/myColor"
        android:layout_height="match_parent">

    </ListView>


</LinearLayout>
